--- a/explore.css
+++ b/explore.css
@@ -13,7 +13,7 @@
 .slideshow-container {
     margin-top: 2.8rem;
     margin-bottom: 4.8rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 100%;
     height: 587px;
     position: relative;
@@ -151,7 +151,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .shop-name{
